# cryptocurrencytda

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  real-data.yml
results/: event_metrics.csv  in_sample_metrics.csv  summary.json  walk_forward_metrics.csv
scripts/: fetch_data.py  generate_report.py  run_pipeline.py
src/cryptotda/: __init__.py  baselines.py  crashes.py  data.py  detector.py  landscapes.py  tda.py  validation.py  visualize.py
tests/: test_detector.py  test_landscapes.py  test_tda.py
