[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotda"
version = "0.1.0"
description = "Persistent homology of cryptocurrency markets as an early-warning system for crashes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "ripser>=0.6.4",
    "persim>=0.3.1",
    "requests>=2.31",
    "tqdm>=4.65",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
